--- a/app/globals.css
+++ b/app/globals.css
@@ -127,7 +127,7 @@ layer(base);
 
 @layer base {
   :root {
-    --background: #e2e8f0;
+    --background: 214 32% 91%;
     --foreground: 0 0% 3.9%;
     --card: 0 0% 100%;
     --card-foreground: 0 0% 3.9%;
@@ -154,7 +154,7 @@ layer(base);
     --radius: 0.5rem;
   }
   .dark {
-    --background: #35353b;
+    --background: 240 5% 22%;
     --foreground: 0 0% 98%;
     --card: 0 0% 3.9%;
     --card-foreground: 0 0% 98%;
