--- a/app/globals.css
+++ b/app/globals.css
@@ -1,12 +1,18 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap")
-layer(base);
+/* @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap")
+layer(base); */
+/* 
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"); */
 
 @import "tailwindcss";
 @plugin 'tailwindcss-animate';
 
 @custom-variant dark (&:is(.dark *));
 
-@theme {
+@theme inline {
+  /* --font-open: Open Sans, sans serif; */
+  --font-open: var(--font-open-sans);
+  --color-customColor: hsl(38 92% 50%);
+  --color-customColorHover: hsl(38 92% 40%);
   --background-image-gradient-radial: radial-gradient(var(--tw-gradient-stops));
   --background-image-gradient-conic: conic-gradient(
     from 180deg at 50% 50%,
@@ -35,7 +41,7 @@ layer(base);
 
   --animate-spotlight: spotlight 2s ease 0.75s 1 forwards;
 
-  --font-montserrat: Montserrat, sans serif;
+  /* --font-montserrat: Montserrat, sans serif; */
 
   --radius-lg: var(--radius);
   --radius-md: calc(var(--radius) - 2px);
@@ -127,7 +133,7 @@ layer(base);
 
 @layer base {
   :root {
-    --background: 214 32% 91%;
+    --background: 220, 14%, 96%;
     --foreground: 0 0% 3.9%;
     --card: 0 0% 100%;
     --card-foreground: 0 0% 3.9%;
@@ -154,7 +160,7 @@ layer(base);
     --radius: 0.5rem;
   }
   .dark {
-    --background: 240 5% 22%;
+    --background: 0, 0%, 15%;
     --foreground: 0 0% 98%;
     --card: 0 0% 3.9%;
     --card-foreground: 0 0% 98%;
@@ -244,13 +250,13 @@ layer(base);
 /*Grid Pattern Backgrounds*/
 
 .bg-dot-pattern {
-  background-image: radial-gradient(#f0be6d 1px, transparent 1px);
+  background-image: radial-gradient(#f59f0a 1px, transparent 1px);
   background-size: 24px 24px;
 }
 
 .bg-dot-pattern-gradient {
-  background: linear-gradient(to right, #f0be6d, transparent);
-  background-image: radial-gradient(#f0be6d 1.2px, transparent 1.4px);
+  background: linear-gradient(to right, #f59f0a, transparent);
+  background-image: radial-gradient(#f59f0a 1.2px, transparent 1.4px);
   background-size: 30px 24px;
 }
 
@@ -262,7 +268,7 @@ layer(base);
 
 .bg-radial-dot-pattern {
   background-color: var(--background);
-  background-image: radial-gradient(#f0be6d 1.2px, transparent 1.2px);
+  background-image: radial-gradient(#f59f0a 1.2px, transparent 1.2px);
   background-size: 26px 26px;
   background-position: center;
   position: relative;
